2007-09-12  Michael Natterer  <mitch@gimp.org>

	Bring back our menus when building on OS X but not against the
	quartz GDK backend:

	* configure.in: added conditional HAVE_GDK_QUARTZ.

	* menus/Makefile.am: use it when moving the help menu around.

	* app/dialogs/preferences-dialog.c
	* app/display/gimpdisplayshell.c
	* app/gui/gtk-macmenu.c
	* app/gui/gui.c
	* app/widgets/gimptoolbox.c: use #ifdef GDK_WINDOWING_QUARTZ
	instead of #ifdef HAVE_CARBON when enabling the global menubar.

2007-09-12  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorprofilecombobox.c
	(gimp_color_profile_combo_box_new): fixed reference count of the
	profile store.

2007-09-12  Øyvind Kolås  <pippin@gimp.org>

	* app/core/gimp-transform-region.c: (supersample_dtest): do not invoke
	supersampling for linear, bicubic and lanczos until the largest
	horizontal/vertical difference between transformed pixel corners goes
	above sqrt(2) (this ensures interpolation instead of supersampling is
	used for rotation.)

2007-09-12  Sven Neumann  <sven@gimp.org>

	* app/core/gimpcontainer-filter.c
	(gimp_container_filter_by_name): changed to use extended regular
	expression syntax.

2007-09-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: remember color conversion parameters
	(bug #475966).

2007-09-12  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.def: added gimp_context_list_paint_methods.

	* libgimp/tmpl/gimpcontext.sgml: regenerated.

2007-09-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/pnm.c (pnm_load_ascii): fixed loading of PGM
	files with maxval of 1 (bug #475991).

2007-09-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: fixed use of black-point-compensation
	parameter (bug #475952).

2007-09-11  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/psp.c: don't use "major" and "minor" as variable
	names, they may conflict with system symbols.

2007-09-11  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c: formatting.
